# fer.pp.lab

dz1/: CMakeLists.txt  main.cc
dz2/: CMakeLists.txt  benchmarks.md  main.cc  results.xlsx  state_data.txt
dz3/: CMakeLists.txt  main.cc  main.cu  zad1.cc  zad1_cpu.cc  zad1_results.md  zad1_suboptimal.cc  zad2.cc  zad2_cpu.cc  zad2_results.md
dz3/zad3/: CMakeLists.txt  boundary.cpp  boundary.h  cfd_opencl.cpp  jacobi_opencl.cpp  jacobi_opencl.hh
mpi/: CMakeLists.txt  main.cc
